--- a/advantage.css
+++ b/advantage.css
@@ -10,7 +10,7 @@
     font-size:16px; /* Ставим дочкам размер шрифта, иначе примет значение родителя */
     /* Для IE 6 и IE 7 чтобы блоки были по горизонтали*/
     zoom: 1;
-    *display: inline;
+    display: inline;
     
     }
     div.inline{font-size:0;} /* Ставим родителю значение 0, чтобы убрать отступы у блоков*/
