--- a/search.css
+++ b/search.css
@@ -1,4 +1,4 @@
-body.theme-green.theme_11 .wrapper .header .header-wrapper .header-search input.form-control {
+body.theme-green-1.theme_11 .wrapper .header .header-wrapper .header-search input.form-control {
   border-color: #0000;
   -webkit-box-shadow: inset 0px 1px 6px rgb(151 150 150 / 39%) !important;
   box-shadow: inset 0px 1px 6px rgb(151 150 150 / 39%) !important;
