--- a/search.css
+++ b/search.css
@@ -3,3 +3,7 @@ body.theme-green-1.theme_11 .wrapper .header .header-wrapper .header-search inpu
   -webkit-box-shadow: inset 0px 1px 6px rgb(151 150 150 / 39%) !important;
   box-shadow: inset 0px 1px 6px rgb(151 150 150 / 39%) !important;
 }
+
+body.theme-green-1 .header .navigation-wrapper {
+    border-top: none;
+}
