--- a/search.css
+++ b/search.css
@@ -1,9 +1,16 @@
+/* Header: убираем границы, делаем тень */
 body.theme-green-1.theme_11 .wrapper .header .header-wrapper .header-search input.form-control {
   border-color: #0000;
   -webkit-box-shadow: inset 0px 1px 6px rgb(151 150 150 / 39%) !important;
   box-shadow: inset 0px 1px 6px rgb(151 150 150 / 39%) !important;
 }
 
+/* Убираем границу перед навигацией */
 body.theme-green-1 .header .navigation-wrapper {
     border-top: none;
+}
+
+/* Скругляем углы у поиска */
+body.theme_11 .wrapper .header .header-wrapper .header-search input {
+    border-radius: 30px;
 }
