--- a/search.css
+++ b/search.css
@@ -371,3 +371,8 @@ body.theme_11.product-product .product-single.product-item #tab-description, bod
     padding: 25px;
 }
 
+/* Тень при наведении на товар */
+.product-single .product_slide:hover {
+-webkit-box-shadow: 5px 5px 3px 3px rgba(0, 0, 0, 0.3);
+box-shadow: 5px 5px 3px 3px rgba(0, 0, 0, 0.3);
+}
