--- a/search.css
+++ b/search.css
@@ -439,7 +439,7 @@ body.theme_11.product-product .product-single.product-item .buttons .btn-wish-li
 
 #home > div > div.content-area > div.mymap_section > iframe:hover {
 
-filter: none;
-transition: none;
+filter: grayscale(.1);
+transition: all .3s ease;
 
 }
