--- a/search.css
+++ b/search.css
@@ -437,9 +437,9 @@ body.theme_11.product-product .product-single.product-item .buttons .btn-wish-li
 
 /* Карта: затемнение при наведении */
 
-#home > div > div.content-area > div.mymap_section > iframe:hover {
+#home > div > div.content-area > div.mymap_section > iframe:active {
 
-filter: grayscale(.1);
+filter: grayscale(.7);
 transition: all .3s ease;
 
 }
