--- a/search.css
+++ b/search.css
@@ -411,7 +411,7 @@ body.theme_11 .wrapper footer.footer {
 }
 
  body .content-area {
-    padding-bottom: 10px !important;
+    padding-bottom: 40px;
 }
 
 /* Текст "Категория товаров" - выравниванием по середине */
