--- a/mymodal.css
+++ b/mymodal.css
@@ -19,10 +19,10 @@ body {font-family: Arial, Helvetica, sans-serif;}
 .modal-content {
   position: relative;
   background-color: #fefefe;
-  margin: auto;
+  margin: 35% auto;
   padding: 0;
   border: 1px solid #888;
-  width: 50%;
+  width: 40%;
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
   -webkit-animation-name: animatetop;
   -webkit-animation-duration: 0.4s;
@@ -44,7 +44,7 @@ body {font-family: Arial, Helvetica, sans-serif;}
 }
 
 .modal-header {
-  padding: 2px 16px;
+  padding: 10px 16px;
   background-color: #5cb85c;
   color: white;
 }
@@ -55,6 +55,7 @@ body {font-family: Arial, Helvetica, sans-serif;}
   padding: 2px 16px;
   background-color: #5cb85c;
   color: white;
+  justify-content: center !important;
 }
 
 .close {
