--- a/mymodal.css
+++ b/mymodal.css
@@ -19,7 +19,7 @@ body {font-family: Arial, Helvetica, sans-serif;}
 .modal-content {
   position: relative;
   background-color: #fefefe;
-  margin: 35% auto;
+  margin: 100px auto;
   padding: 0;
   border: 1px solid #888;
   width: 40%;
