--- a/mymodal.css
+++ b/mymodal.css
@@ -72,3 +72,9 @@ body {font-family: Arial, Helvetica, sans-serif;}
 	text-decoration: none;
 	cursor: pointer
 }
+
+
+body.ltr .close {
+  right: 5px !important;
+  left: auto !important;
+}
