--- a/mymodal.css
+++ b/mymodal.css
@@ -54,7 +54,7 @@ body {font-family: Arial, Helvetica, sans-serif;}
 
 .modal-footer {
   padding: 2px 16px;
-  background-color: #5cb85c;
+  background-color: #f5f5f5;
   color: white;
   justify-content: center !important;
 }
@@ -75,6 +75,6 @@ body {font-family: Arial, Helvetica, sans-serif;}
 
 
 body.ltr .close {
-  right: 5px !important;
+  right: 15px !important;
   left: auto !important;
 }
