--- a/scripts/myModal/checkout/modal.css
+++ b/scripts/myModal/checkout/modal.css
@@ -17,7 +17,7 @@ body {font-family: Arial, Helvetica, sans-serif;}
 
 
 /* Modal Content */
-.modal-content1 {
+.modal-content {
   position: relative;
   background-color: #fefefe;
   margin: 100px auto;
@@ -45,38 +45,38 @@ body {font-family: Arial, Helvetica, sans-serif;}
   to {top:0; opacity:1}
 }
 
-.modal-header1 {
+.modal-header {
   padding: 10px 16px;
   background-color: #5cb85c;
   color: white;
   justify-content: center;
 }
 
-.modal-body1 {padding: 2px 16px;}
+.modal-body {padding: 2px 16px;}
 
-.modal-footer1 {
+.modal-footer {
   padding: 2px 16px;
   background-color: #f5f5f5;
   color: white;
   justify-content: center !important;
 }
 
-.close1 {
+.close {
 	color: rgb(255, 255, 255);
 	float: right !important;
 	font-size: 30px;
 	font-weight: 700
 }
 
-.close1:focus,
-.close1:hover {
+.close:focus,
+.close:hover {
 	color: #000;
 	text-decoration: none;
 	cursor: pointer
 }
 
 
-body.ltr .close1 {
+body.ltr .close {
   right: 15px !important;
   left: auto !important;
 }
