--- a/scripts/myModal/checkout/modal.css
+++ b/scripts/myModal/checkout/modal.css
@@ -1,7 +1,7 @@
 body {font-family: Arial, Helvetica, sans-serif;}
 
 /* The Modal (background) */
-.modalCheckout {
+.modalCheckout1 {
   display: none; /* Hidden by default */
   position: fixed; /* Stay in place */
   z-index: 1; /* Sit on top */
@@ -17,7 +17,7 @@ body {font-family: Arial, Helvetica, sans-serif;}
 
 
 /* Modal Content */
-.modal-content {
+.modal-content1 {
   position: relative;
   background-color: #fefefe;
   margin: 100px auto;
@@ -45,16 +45,16 @@ body {font-family: Arial, Helvetica, sans-serif;}
   to {top:0; opacity:1}
 }
 
-.modal-header {
+.modal-header1 {
   padding: 10px 16px;
   background-color: #5cb85c;
   color: white;
   justify-content: center;
 }
 
-.modal-body {padding: 2px 16px;}
+.modal-body1 {padding: 2px 16px;}
 
-.modal-footer {
+.modal-footer1 {
   padding: 2px 16px;
   background-color: #f5f5f5;
   color: white;
