--- a/scripts/calculator/input.css
+++ b/scripts/calculator/input.css
@@ -102,3 +102,6 @@ body.theme_11.product-product .product-single.product-item .buttons .quantity_ne
     color: #f1f1f1;
 }
 
+body .btn.btn-theme {
+    width: 100%;
+}
