--- a/scripts/calculator/input.css
+++ b/scripts/calculator/input.css
@@ -95,7 +95,7 @@ body.theme_11.product-product .product-single.product-item .buttons .quantity_ne
     height: 50px;
     width: 270px;
     border-radius: 4px;
-    display: block;
+    display: block !important;
 }
 
 .product-product .product-single .buttons .btn-cart:hover {
