--- a/styles/main.css
+++ b/styles/main.css
@@ -457,3 +457,7 @@ filter: none !important;
 transition: all .3s ease;
 
 }
+
+body.theme-green-1 .top-bar ul a:hover .fa, body.theme-green-1 .top-bar ul a span.colored, body.theme-green-1 a {
+  color: #00b16a !important;
+}
