--- a/scripts/calculator/input.css
+++ b/scripts/calculator/input.css
@@ -109,7 +109,8 @@ body .btn.btn-theme {
 
 /* Скрыть "Удалить" при оформлении заказа */
 
-.checkout_form #cart_table .order_list_section .order_list_section__product-list .product_tr .single-price>a, .checkout_form #cart_table .order_list_section .order_list_section__product-list .product_tr .single-price>div a {
+.checkout_form #cart_table .order_list_section .order_list_section__product-list .product_tr .single-price>a, 
+.checkout_form #cart_table .order_list_section .order_list_section__product-list .product_tr .single-price>div a {
     display: none;
     justify-content: flex-end;
 }
